fix: update lib directory in readme and fix cmake find_package(casbin)(#148)
- change CMakeLists export file name to casbinConfig.cmake

Signed-off-by: stonex <1479765922@qq.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -99,7 +99,7 @@ if(CASBIN_INSTALL)
     export(
         TARGETS casbin
         NAMESPACE casbin::
-        FILE casbinTargets.cmake
+        FILE casbinConfig.cmake
     )
 
     # Installing headers
