feat: add json parser to build attribute in duktape (#166)
* feat: add json parser to build attribute in duktape

Signed-off-by: stonex <1479765922@qq.com>

* feat: implement test basic ABAC model without policy using json.

Signed-off-by: stonex <1479765922@qq.com>

--- a/bindings/python/CMakeLists.txt
+++ b/bindings/python/CMakeLists.txt
@@ -71,6 +71,7 @@ target_link_libraries(pycasbin
     PRIVATE
         pybind11::module
         casbin
+        nlohmann_json::nlohmann_json
 )
 
 if(WIN32)
