feat: add eval regex and test
Signed-off-by: stonex <1479765922@qq.com>

--- a/casbin/CMakeLists.txt
+++ b/casbin/CMakeLists.txt
@@ -66,6 +66,7 @@ set(CASBIN_SOURCE_FILES
     util/split.cpp
     util/ticker.cpp
     util/trim.cpp
+    util/eval.cpp
 )
 
 # Setting to C++ standard to C++17
