--- a/.github/workflows/python_binding.yml
+++ b/.github/workflows/python_binding.yml
@@ -17,31 +17,27 @@ name: Python Bindings Test
 on: [push, pull_request]
 
 jobs:
-  benchmark:
-    name: Python Bindings Test
-    runs-on: macos-latest
+  build:
+    strategy:
+      fail-fast: false
+      matrix:
+        platform: [windows-latest, macos-latest, ubuntu-latest]
+        python-version: ["3.6", "3.8", "3.10"]
+
+    runs-on: ${{ matrix.platform }}
+
     steps:
-      - name: Checkout
-        id: checkout
-        uses: actions/checkout@v2
-      - name: Configuring CMake files
-        id: building-files
-        run: |
-          mkdir build && cd build && cmake .. -DCMAKE_BUILD_TYPE:STRING=Release
-      - name: Building library
-        id: building-lib
-        run: |
-          cd build && cmake --build . --config Release --target all -j 10 --
-      - name: Installing pycasbin
-        id: installing-pycasbin
-        run: |
-          cd build && sudo cmake --build . --config Release --target install -j 10 --
-      - name: Run Tests
-        id: run-tests
-        run: |
-          cd tests/python && python3 pycasbin_test_suite.py
-      - name: Cleanup
-        id: clean-up
-        run: |
-          rm -r build
-          rm tests/python/pycasbin.so
+    - uses: actions/checkout@v2
+      with:
+        submodules: true
+    - uses: actions/setup-python@v2
+      with:
+        python-version: ${{ matrix.python-version }}
+    - name: Add requirements
+      run: python -m pip install --upgrade wheel setuptools
+
+    - name: Build and install
+      run: pip install --verbose .
+
+    - name: Test
+      run:  cd pycasbin/tests && python pycasbin_test_suite.py
