--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,6 +24,11 @@ jobs:
       - name: Checkout
         id: checkout
         uses: actions/checkout@v2
+      - name: Install requirement
+        id: install-requirements
+        run: |
+          sudo apt-get update
+          sudo apt-get install valgrind
       - name: Configuring CMake files
         id: building-files
         run: |
@@ -36,7 +41,12 @@ jobs:
         id: test-lib
         run: |
           cd build
-          ctest -j10 -C Release -T test --output-on-failure -T test --output-on-failure
+          ctest -j10 -C Release -T test --output-on-failure
+      - name: Memcheck
+        id: memcheck
+        run: |
+          cd build
+          ctest -j10 -C Release -T MemCheck --output-on-failure
       - name: Cleanup
         id: clean-up
         run: |
@@ -64,7 +74,7 @@ jobs:
         id: test-lib
         run: |
           cd build
-          ctest -j10 -C Debug -T test --output-on-failure -T test --output-on-failure
+          ctest -j10 -C Release -T test --output-on-failure
 
   macos:
     name: "macOS Catalina 10.15 (AppleClang 12.0)"
@@ -85,7 +95,7 @@ jobs:
         id: test-lib
         run: |
           cd build
-          ctest -j10 -C Debug -T test --output-on-failure -T test --output-on-failure
+          ctest -j10 -C Release -T test --output-on-failure
       - name: Cleanup
         id: clean-up
         run: |
