--- a/.github/workflows/python_binding.yml
+++ b/.github/workflows/python_binding.yml
@@ -22,7 +22,7 @@ jobs:
       fail-fast: false
       matrix:
         platform: [windows-latest, macos-latest, ubuntu-latest]
-        python-version: ["3.6", "3.8", "3.10"]
+        python-version: ["3.8", "3.10"]
 
     runs-on: ${{ matrix.platform }}
 
