feat: [basic_model_speedup] option to use unordered_set<vector> instead of vector<vector> for policies storage

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,6 +23,8 @@ if(APPLE AND NOT DEFINED CMAKE_OSX_DEPLOYMENT_TARGET)
     set(CMAKE_OSX_DEPLOYMENT_TARGET "10.13" CACHE STRING "Minimum OS X deployment version")
 endif()
 
+add_compile_options("-DHASHED_POLICIES_VALUES")
+
 if(WIN32)
     add_compile_options("/bigobj")
 endif()
