feat: [basic_model_speedup] new policy_collection that abstract vector/unordered_set

--- a/casbin/CMakeLists.txt
+++ b/casbin/CMakeLists.txt
@@ -43,6 +43,7 @@ set(CASBIN_SOURCE_FILES
     model/function.cpp
     model/model.cpp
     model/evaluator.cpp
+    model/policy_collection.cpp
     persist/file_adapter/batch_file_adapter.cpp
     persist/file_adapter/file_adapter.cpp
     persist/file_adapter/filtered_file_adapter.cpp
