--- a/casbin/CMakeLists.txt
+++ b/casbin/CMakeLists.txt
@@ -16,6 +16,7 @@ set(CASBIN_SOURCE_FILES
     enforcer.cpp
     enforcer_cached.cpp
     enforcer_synced.cpp
+    selected_policies.cpp
     internal_api.cpp
     logger.cpp
     management_api.cpp
@@ -42,6 +43,7 @@ set(CASBIN_SOURCE_FILES
     model/function.cpp
     model/model.cpp
     model/evaluator.cpp
+    model/policy_collection.cpp
     persist/file_adapter/batch_file_adapter.cpp
     persist/file_adapter/file_adapter.cpp
     persist/file_adapter/filtered_file_adapter.cpp
