--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,8 +18,8 @@ on: [push, pull_request]
 
 jobs:
   linux:
-    name: "Linux Ubuntu 20.04 (GNU 9.3.0)"
-    runs-on: ubuntu-20.04
+    name: "Ubuntu Latest (GNU 9.3.0)"
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout
         id: checkout
@@ -43,7 +43,7 @@ jobs:
           rm -r build
 
   windows:
-    name: "Windows 10 (MSVC 19.29)"
+    name: "Windows Latest (MSVC 19.29)"
     runs-on: windows-latest
     steps:
       - name: Checkout
@@ -67,7 +67,7 @@ jobs:
           ctest -j10 -C Release -T test --output-on-failure
 
   macos:
-    name: "macOS Catalina 10.15 (AppleClang 12.0)"
+    name: "macOS Latest (AppleClang 12.0)"
     runs-on: macos-latest
     steps:
       - name: Checkout
