--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -76,7 +76,7 @@ jobs:
       - name: Configuring CMake files
         id: building-files
         run: |
-          mkdir build && cd build && cmake ..
+          mkdir build && cd build && cmake .. -DCMAKE_INSTALL_PREFIX=~/local
       - name: Building library
         id: building-lib
         run: |
